Added crafting recipes

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,29 @@
     <groupId>me.NotoriousPark.ArrowHeads</groupId>
     <artifactId>ArrowHeads</artifactId>
     <version>1.0</version>
+    <packaging>jar</packaging>
 
+    <name>Arrow Heads</name>
+    <url>http://maven.apache.org</url>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.bukkit</groupId>
+            <artifactId>craftbukkit</artifactId>
+            <version>1.7.9-RO.1</version>
+            <type>jar</type>
+        </dependency>
+    </dependencies>
+
+    <repositories>
+        <repository>
+            <id>bukkit-repo</id>
+            <url>http://repo.bukkit.org/content/groups/public/</url>
+        </repository>
+    </repositories>
 
 </project>
